<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">NakedSkin</string>
    <string name="left_underarm">Left Underarm</string>
    <string name="right_underarm">Right Underarm</string>
    <string name="right_forearm">Right Forearm</string>
    <string name="bikini_area">Bikini Area</string>
    <string name="right_upper_leg">Right Upper Leg</string>
    <string name="right_lower_leg">Right Lower Leg</string>
    <string name="proceed">Proceed</string>
    <string name="view">View</string>
    <string name="whichphase">Which phase are you in?</string>
    <string name="howmanysession">How many sessions have you done?</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string-array name="sessions_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="reminder_array">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string name="none">None</string>
    <string name="hint">Nothing</string>
    <string name="set_underarm">Set underarm treatment period</string>
    <string name="save">Save</string>
    <string name="view_tutorial">View Application Tutorial</string>
    <string name="underarm">Underarm</string>
    <string name="upper_leg">Upper Leg</string>
    <string name="lower_leg">Lower Leg</string>
    <string name="howtovideos">Videos</string>
    <string name="setting">Reminder Settings</string>
    <string name="buygel">Buy More Gel</string>
    <string name="regimen">How Often to Use?</string>
    <string name="howitworks">How It Works</string>
    <string name="howtouse">How to Use It</string>
    <string name="home">Home</string>
    <string name="set_bikini">Set bikini area treatment period</string>
    <string name="set_bikiniunderarm">Set bikini area/underarm treatment period</string>
    <string name="set_upperlowerleg">Set upper/lower leg treatment period</string>
    <string name="choose">Choose Duration:</string>
    <string name="wholebody">Whole Body</string>
    <string name="todaysevents">Today\'s Treatments</string>
    <string name="treatmentcontentimage">Treatmente Image</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="settings_saved">Settings have been saved!</string>
    <string name="treatment_option_message">Would you like to continue with the Start Up phase and set a reminder to treat in two weeks, or are you ready to start the Maintenance Phase and set a reminder to treat in two months?</string>
    <string name="maintenance">Maintenance</string>
    <string name="startup">Start-up</string>
    <string name="event_desc_startup_suffix"> </string>
    <string name="event_desc_startup_prefix">This is treatment number </string>
    <string name="maintenance_phase">Maintenance Phase</string>
    <string name="event_title_prefix">Naked Skin </string>
    <string name="event_title_suffix"> treatment reminder</string>
    <string name="reminder_first_startup_prefix">Reminders for your first six </string>
    <string name="reminder_first_startup_suffix"> treatments have been automatically set.</string>
    <string name="reminder_startup_prefix">Reminder for </string>
    <string name="reminder_startup_suffix"> have been set.</string>
    <string name="reminder_startup_middle"> treatment number </string>
    <string name="reminder_maintenance_suffix"> have been set.</string>
    <string name="reminder_maintenance_prefix">Maintenance reminders for </string>
    <string name="calendar_view">Calendar View</string>
    <string name="schedule">Schedule</string>
    <string name="treatment_area_scheduler">Treatment Area Scheduler</string>
    <string name="treatment">Treatment</string>
    <string name="howto">How to</string>
    <string name="settings">Settings</string>
    <string name="lower">Lower</string>
    <string name="bikini">Bikini</string>
    <string name="under">Under</string>
    <string name="whole">Whole</string>
    <string name="upper">Upper</string>
    <string name="done">Done</string>
    <string name="completed">Completed!</string>
    <string name="other">Other</string>
    <string name="howtovideo_url">http://www.youtube.com/watch?v=P-9Q1ppDVI8</string>
    <string name="trvideo_url">http://www.youtube.com/watch?v=YHWc1btzmr8</string>
    <string name="workvideo_url">http://www.youtube.com/watch?v=8YaO9RYPBaE</string>
    <string name="question_mark">\?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="calendar_missing">You don\'t have any calendars! This app won\'t work without a valid calendar on your device. Please double-check in the calendar app.</string>
    <string name="go_back">Go Back</string>
    <string name="okay">Okay</string>
    <string name="tutorial_message">"Hi there, goddess!<br></br> Your journey to Naked Skin<sup><small>®</small></sup> starts now. Click \"Okay\" to learn how this app is going to make your journey easier.You must click through each icon to proceed and finish the tutorial."</string>
    <string name="tutorial_schedule">"Simply go to the Calendar View to view both past and upcoming treatments (circled in blue) as well as today's date (circled in white). Click on any blue circled date to see the details of your appointment with Naked Skin<sup><small>®</small></sup>."</string>
    <string name="tutorial_treatment">"Treat the Treatment Area Scheduler like your personal assistant. Simply select the body part you want to become silky smooth and the date you want your first treatment, and it will automatically schedule the remaining treatments."</string>
    <string name="tutorial_howto">"Check out short videos to learn how Naked Skin<sup><small>®</small></sup> works."</string>
    <string name="tutorial_settings">"You can change how you want to be reminded under Reminder Settings.  Now you're ready to get started."</string>
    <string name="gel_url">http://www.gillettevenus.com/</string>
    <string name="app_tutorial">App Tutorial</string>
    <string name="calendar_select_text">"Now before we get started, you will have to choose a calendar to use with Naked Skin<sup><small>®</small></sup>.  You can always change this in the settings menu."</string>
    <string name="calendar_select_title">Choose a calendar</string>
    <string name="tutorial_start">Here, under \"Today\'s Treatments,\" you can easily check what treatments are scheduled for today.</string>
    <string name="event_title_match">Naked%</string>
    <string name="pick_start">Please select the date you want to start.</string>
    <string name="pick_date">Please select the date of your most recent treatment.</string>
    <string name="pick_time">Please set the time for your reminder.</string>
</resources>
