<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scheduleLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/vbackground"
    android:paddingRight="3dp"
    android:paddingLeft="3dp">
   <LinearLayout
       android:layout_width="fill_parent"
     android:layout_height="fill_parent"
       android:background="@drawable/bodyimage022712"
       android:orientation="vertical"
       android:weightSum="1">

       <LinearLayout
           android:id="@+id/linearLayout1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.21"
           android:orientation="vertical" >
       </LinearLayout>

        <view class="com.Venus.NakedSkin.SelectionButton"
            android:id="@+id/underarm"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="#20ffffff"
            android:gravity="right|center"
            android:text="@string/underarm"
            android:textColor="#ffffff" />
        <LinearLayout
           android:id="@+id/linearLayout1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.075"
           android:orientation="vertical" >
       </LinearLayout>


        <view class="com.Venus.NakedSkin.SelectionButton"
            android:id="@+id/bikiniarea"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.125"
            android:background="#20ffffff"
            android:gravity="right|center"
            android:text="@string/bikini_area"
            android:textColor="#ffffff" />


        <view class="com.Venus.NakedSkin.SelectionButton"
            android:id="@+id/upperleg"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="#20ffffff"
            android:gravity="right|center"
            android:text="@string/upper_leg"
            android:textColor="#ffffff" />

		<view class="com.Venus.NakedSkin.SelectionButton"
		    android:id="@+id/lowerleg"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="0.2"
		    android:background="#20ffffff"
		    android:gravity="right|center"
		    android:text="@string/lower_leg"
		    android:textColor="#ffffff" />

        <Button
            android:id="@+id/scheduleProceed"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:background="@drawable/buttonbackground"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/proceed"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


  </LinearLayout>

</LinearLayout>
